resources_csdp/webhook-relay-express-push/cdp-csdp-default-git-source.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-csdp-default-git-source
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/csdp/express/push
            backend:
              service:
                name: express-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      host: lrcsdp.support.cf-cd.com
